December initial advent and levels